Close WebRTC allocation sequence shared socket in case of sequence network failure https://bugs.webkit.org/show_bug.cgi?id=233808

Reviewed by Geoffrey Garen.

* Source/webrtc/p2p/client/basic_port_allocator.cc:
* Source/webrtc/p2p/client/basic_port_allocator.h:



Canonical link: https://commits.webkit.org/244871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286539 268f45cc-cd09-0410-ab3c-d52691b4dbfc